# backer

./: 00init.sh  HISTORY  HISTORY.utl  INSTALL  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  autogen.sh  backer.spec.in  configure.ac  release.html  release.lst  title.xcf
backer_driv/: CHANGES  HISTORY  INSTALL  Makefile  NOTES.txt  README  backer.4  backer.h  backer_device.h  backer_fmt.c  backer_fmt.h  backer_isa.c  backer_main.c  backer_parport.c  backer_unit.h  rs.c  rs.h
backer_driv/DOCUMENTATION/: backer.4  backer_isa.4  backer_parport.4
backer_driv/EXTRAS/: README  format.gnumeric  format.txt
backer_util/: CHANGES  HISTORY  INSTALL  Makefile  bkr_aux_puts.c  bkr_disp_mode.c  bkr_disp_mode.h  bkrcheck.8  bkrcheck.8.orig  bkrcheck.c  bkrcheck.man  bkrencode.8  bkrencode.8.orig  bkrencode.c  bkrencode.man  bkrenhanced.c  bkrenhanced.man  bkrfont.xpm  bkrlog.c  bkrmode.c  bkrmonitor.8  bkrmonitor.8.orig  bkrmonitor.c  bkrmonitor.man  bkrtest.c  linux_compat.h  stdio_dev.c  stdio_dev.h
codecs/: Makefile.am  bkr_ecc2.c  bkr_ecc2.h  bkr_elements.c  bkr_elements.h  bkr_frame.c  bkr_frame.h  bkr_gcr.c  bkr_gcr.h  bkr_rll.c  bkr_rll.h  bkr_splp.c  bkr_splp.h  bkr_splp_randomize.c  bkr_splp_randomize.h  bkr_video_out.c  bkr_video_out.h  rs.c  rs.h
diagnostics/: Makefile  bit_patterns.txt  bkr_screen.c  bkr_screen.h  bkranalyze.c  bkrlog.c  gcr_encode.c  line_errors.lst  maketables.c  modulation.txt  nonblock.c  pipeline.xml  pipeline.xml.bakup  test.sh
docs/: LaTeX.Rules  Makefile  Makefile.am  backer-driv.tex  backer_isa.4
drivers/: Makefile  Makefile.am  Makefile.in  README  backer.h  backer_device.h  backer_fmt.c  backer_fmt.h  backer_isa.c  bkr_ecc2.c  bkr_frame.c  bkr_gcr.c  bkr_isa.c  bkr_main.c  bkr_parport.c  bkr_ring_buffer.c  bkr_ring_buffer.h  bkr_splp.c  bkr_splp_randomize.c  bkr_stream.c  bkr_stream.h  bkr_unit.h  makefile.am  rs.c
drivers/DOCUMENTATION/: Makefile.am  backer.4  backer_parport.4
drivers/EXTRAS/: README  format.gnumeric  modules.conf
gnuscripts/: kernel.m4
html/: index.html  screenshots.html
src/: .gitignore  00init.sh  HISTORY.drv  Makefile.am  README  configure.ac
src/codecs/: Makefile.am  bkr_bytes.h  bkr_ecc2.c  bkr_ecc2.h  bkr_frame.h  bkr_rll.h  bkr_splp.c  bkr_video_out.c  bkr_video_out.h  rs.c
src/docs/: LaTeX.Rules  TODO  backer.4  bkrencode.8.in
src/drivers/: Makefile.in
src/drivers/EXTRAS/: devfsd.conf
src/gnuscripts/: kernel.m4
src/utilities/: Makefile.am  bkr_aux_puts.c  bkr_aux_puts.h  bkr_disp_mode.h  bkr_font.xpm  bkr_proc_io.c  bkr_proc_io.h  bkr_puts.h  bkr_screen.c  bkrencode.c  bkrfont.xpm  bkrlog.c  bkrmonitor.c  bkrvideo  test.sh
utilities/: HISTORY  INSTALL  Makefile.am  Makefile.in  bkr_aux_puts.c  bkr_disp_mode.c  bkr_disp_mode.h  bkr_font.xpm  bkr_puts.c  bkr_puts.h  bkr_screen.c  bkr_screen.h  bkr_stdio_dev.c  bkr_stdio_dev.h  bkrcheck.c  bkrencode.c  bkrencode.man  bkrmode.c  bkrmonitor.c  bkrmonitor.man  bkrvideo  test.sh
utilities/DOCUMENTATION/: Makefile.am  bkrcheck.8.in  bkrmonitor.8.in
